2000-03-23  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* tags.h: Disabled definition of SCM_VOIDP_TEST.

	Defining SCM as void * introduces problems which haven't been
	handled yet.  Developers who work with these issues can enable it
	in their working copies.

	Disabling this definition exposes a set of newly introduced and
	older misuses of types which causes warning messages during
	compilation.  We'll fix this successively.

	* gc.c (scm_mark_locations): Changed * (SCM **) X --> * (SCM *) X
	in order to obtain a value of type SCM.
	(scm_cellp): Updated with new changes to scm_mark_locations.

	* continuations.h (SCM_SETJMPBUF): Cast second arg into SCM.

	* continuations.c (scm_make_cont): Removed cast of size_t into
	long.

	* symbols.h (SCM_SETCHARS): Cast second arg into SCM.

2000-03-22  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* numbers.h (SCM_SETNUMDIGS):  Use SCM_BIGSIZEFIELD macro for
	shifting, not constant.  Thanks to Dale P. Smith.

	* numbers.c (scm_sum, scm_difference):  Don't test a SCM value
	for being less than zero.  Decode it to a C value first.  Again,
	thank you Dale.

2000-03-22  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* numbers.h, ramap.c, struct.h, vectors.h:  Don't use SCM2PTR for
	non scheme values.  If raw data is stored in SCM variables, it has
	to be accessed using SCM_UNPACK until a better solution is found.

2000-03-22  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* tags.h (SCM_ECONSP, SCM_NECONSP): More corrections of
	pointer-arithmetic induced by the SCM_PACK/UNPACK change.

	* print.c (scm_iprin1): SCM_PACK/UNPACK corrections.

	* gc.c (scm_gc_sweep): SCM_PACK/UNPACK corrections.

	* eval.c (SCM_CEVAL, scm_unmemocar): SCM_PACK/UNPACK corrections.

	* dynwind.c (scm_swap_bindings): SCM_PACK/UNPACK corrections.

	* async.c, __scm.h: Removed lots of the old async click logic.  It
	is possible to reinsert it by defining GUILE_OLD_ASYNC_CLICK in
	__scm.h.  Let's try this out and dump the old code after the
	threads reorganization.